Avoiding filetree title to stretch when toggling project visibility. Fixes #8

--- a/src/components/fileTree/styles.css
+++ b/src/components/fileTree/styles.css
@@ -59,6 +59,11 @@
     height: inherit;
     overflow-y: auto;
     overflow-x: hidden;
+    opacity: 0;
+}
+
+.FileTree .rootContent.visible {
+    opacity: 1;
 }
 
 .FileTree .node {
